[package]
name = "frog_jump"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benches"
harness = false

[features]
dfs = []
iterative = []
par = []
par_dfs = []
recursive = []
walk_tree = []

[dependencies]
either = "1.15.0"
rayon = "1.10.0"
scc = "2.3.4"

[dev-dependencies]
criterion = "0.6.0"
