[package]
name = "frog_jump"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benches"
harness = false

[features]
dfs = []
iterative = []
par = []
par_dfs = []
par_dfs2 = []
recursive = []
walk_tree = []

[dependencies]
itertools = "0.14.0"
rayon = "1.10.0"
scc = "2.3.4"
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
criterion = "0.6.0"
